...
@implementation DDGameCenter
- (instancetype)initWithPresenter:(UIViewController *)presenter {
    id<DDGameCenterPlayer> player = nil;
    BOOL enabled = DDDUMPLING_GAME_CENTER;
#if DDDUMPLING_GAME_CENTER
    NSDictionary *environment = NSProcessInfo.processInfo.environment;
    enabled = enabled && ![environment[@"DDD_GAME_CENTER_DISABLED"] boolValue]
        && !environment[@"XCTestConfigurationFilePath"];
    if (enabled) player = [DDGameKitPlayer new];
#endif
    return [self initWithPresenter:presenter player:player enabled:enabled];
}
- (instancetype)initWithPresenter:(UIViewController *)presenter
...
